WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
119295
Shrink Vectors with inline capacity.
https://bugs.webkit.org/show_bug.cgi?id=119295
Summary
Shrink Vectors with inline capacity.
Andreas Kling
Reported
2013-07-30 16:52:05 PDT
Shrink Vectors with inline capacity.
Attachments
Patch
(5.45 KB, patch)
2013-07-30 16:53 PDT
,
Andreas Kling
andersca
: review+
Details
Formatted Diff
Diff
Patch for landing
(5.57 KB, patch)
2013-07-30 17:07 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Geoffified patch for landing
(6.82 KB, patch)
2013-07-30 18:38 PDT
,
Andreas Kling
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2
(2.04 MB, application/zip)
2013-07-30 20:50 PDT
,
Build Bot
no flags
Details
Land already
(6.97 KB, patch)
2013-07-30 22:43 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2013-07-30 16:53:16 PDT
Created
attachment 207786
[details]
Patch
WebKit Commit Bot
Comment 2
2013-07-30 16:54:40 PDT
Attachment 207786
[details]
did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WTF/ChangeLog', u'Source/WTF/wtf/SizeLimits.cpp', u'Source/WTF/wtf/Vector.h']" exit_code: 1 Source/WTF/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 3 files If any of these errors are false positives, please file a bug against check-webkit-style.
Radar WebKit Bug Importer
Comment 3
2013-07-30 17:02:35 PDT
<
rdar://problem/14598360
>
Andreas Kling
Comment 4
2013-07-30 17:07:17 PDT
Created
attachment 207788
[details]
Patch for landing
Geoffrey Garen
Comment 5
2013-07-30 17:09:18 PDT
Comment on
attachment 207788
[details]
Patch for landing Seems like the Base constructor should take size as an argument, like it takes capacity.
Andreas Kling
Comment 6
2013-07-30 18:38:16 PDT
Created
attachment 207795
[details]
Geoffified patch for landing
Build Bot
Comment 7
2013-07-30 20:50:51 PDT
Comment on
attachment 207795
[details]
Geoffified patch for landing
Attachment 207795
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
http://webkit-queues.appspot.com/results/1294573
New failing tests: accessibility/anchor-linked-anonymous-block-crash.html compositing/absolute-inside-out-of-view-fixed.html animations/3d/matrix-transform-type-animation.html http/tests/cache/cancel-multiple-post-xhrs.html animations/3d/state-at-end-event-transform.html animations/added-while-suspended.html animations/animation-add-events-in-handler.html animations/additive-transform-animations.html animations/3d/replace-filling-transform.html compositing/bounds-in-flipped-writing-mode.html accessibility/accessibility-node-reparent.html animations/animation-border-overflow.html accessibility/accessibility-object-detached.html animations/animation-controller-drt-api.html http/tests/cache/display-image-unset-allows-cached-image-load.html animations/3d/change-transform-in-end-event.html compositing/absolute-position-changed-with-composited-parent-layer.html compositing/absolute-position-changed-in-composited-layer.html http/tests/cache/cancel-during-revalidation-succeeded.html canvas/philip/tests/2d.canvas.readonly.html animations/3d/transform-perspective.html http/tests/cache/cancel-during-failure-crash.html canvas/philip/tests/2d.canvas.reference.html canvas/philip/tests/2d.clearRect+fillRect.alpha0.5.html animations/3d/transform-origin-vs-functions.html accessibility/accessibility-node-memory-management.html http/tests/cache/cached-main-resource.html accessibility/adjacent-continuations-cause-assertion-failure.html canvas/philip/tests/2d.clearRect+fillRect.basic.html canvas/philip/tests/2d.clearRect+fillRect.alpha0.html
Build Bot
Comment 8
2013-07-30 20:50:53 PDT
Created
attachment 207803
[details]
Archive of layout-test-results from webkit-ews-09 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-09 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.4
Andreas Kling
Comment 9
2013-07-30 22:43:55 PDT
Created
attachment 207809
[details]
Land already
WebKit Commit Bot
Comment 10
2013-07-31 01:11:18 PDT
Comment on
attachment 207809
[details]
Land already Clearing flags on attachment: 207809 Committed
r153514
: <
http://trac.webkit.org/changeset/153514
>
WebKit Commit Bot
Comment 11
2013-07-31 01:11:20 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug