Shrink Vectors with inline capacity. <http://webkit.org/b/119295> <rdar://problem/14598360>

Reviewed by Anders Carlsson.

Pack Vector::m_size next to VectorBufferBase::m_capacity so there's no space wasted
on padding when sizeof(T) >= 8. Since m_size is not conceptually part of the buffer,
I just using'ed it into Vector.

* wtf/SizeLimits.cpp:
* wtf/Vector.h:
(WTF::VectorBufferBase::VectorBufferBase):
(WTF::VectorBuffer::VectorBuffer):
(WTF::Vector::Vector):
(WTF::::Vector):


Canonical link: https://commits.webkit.org/137275@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@153514 268f45cc-cd09-0410-ab3c-d52691b4dbfc